[Update] 지역 카운팅해서 반환하기, 기능 테스트 포함 (#8)
프론트단에서 api 호출하여 지역 정보를 전달한 후 그 데이터를 이용하여 count하는 로직이 포함되어 있습니다.
해당 로직을 백엔드로 들고오는 이슈입니다.